<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/constraintLayout5"
        style="@style/marginFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="start|center"
        android:onClick="goBack"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <ImageView
            android:id="@+id/btnArrowBack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:rotation="180"
            android:src="@drawable/arrow_side_btn_pressed" />

        <TextView
            android:id="@+id/settingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/settings_label"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time"
        style="@style/marginFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDialogueTime"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/stage_text_I"
                android:textAlignment="viewStart"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end|center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/moves_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/moves_increment"
                android:textColor="@color/almost_grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_firstStageMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/roboto"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp"
                tools:text="1" />

            <TextView
                android:id="@+id/firstDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/divider"
                android:textColor="@color/almost_grey"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp"
                tools:text="05:24" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_for_lines" />

    <LinearLayout
        android:id="@+id/ll_secondStage"
        style="@style/marginFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_settings_changable_color"
        android:onClick="openSecondStage"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/stage_text_II"
                android:textAlignment="viewStart"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end|center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_secondStageMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/roboto"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp"
                tools:text="1" />

            <TextView
                android:id="@+id/secondDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/divider"
                android:textColor="@color/almost_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_timeSecondStage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp"
                tools:text="05:24" />

            <LinearLayout
                android:id="@+id/grabage_secondStage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="garbageSecondStage"
                android:paddingStart="16dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/btn_garbage_pressed" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_for_lines" />

    <LinearLayout
        android:id="@+id/ll_thirdStage"
        style="@style/marginFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_settings_changable_color"
        android:onClick="openThirdStage"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/stage_text_III"
                android:textAlignment="viewStart"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="end|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_timeThirdStage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp"
                tools:text="05:24" />

            <LinearLayout
                android:id="@+id/grabage_thirdStage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="garbageThirdStage"
                android:paddingStart="16dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/btn_garbage_pressed" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_addNewStage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/item_settings_changable_color"
        android:gravity="center"
        android:onClick="addNewStage"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/plus_btn_pressed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.619" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add_stage"
            android:textColor="@drawable/text_changeable_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_increment"
        style="@style/marginFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_settings_changable_color"
        android:onClick="openDialogueIncrement"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/compensation"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/roboto"
                android:text="@string/nullNullFive"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_increment_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp"
                tools:text="F" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btnSettingsSaveBottom"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/btnSettingsSave"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/btnSettingsSaveBottom"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/item_pressed_state"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:onClick="saveElement"
            android:text="@string/save"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />


    </RelativeLayout>


</LinearLayout>