<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/constraintLayout2"
        style="@style/marginFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:onClick="goBack"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:duplicateParentState="true"
                android:rotation="180"
                android:src="@drawable/arrow_side_btn_pressed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/roboto"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:text="@string/timer"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:onClick="editTimersOnClick"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_edit"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:duplicateParentState="true"
                android:src="@drawable/pencil_btn_pressed" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/roboto"
                android:paddingStart="8dp"
                android:text="@string/btn_edit"
                android:textColor="@drawable/text_changeable_color"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_add_new"
        style="@style/marginFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="addNewOnClick"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/add_new_time_label"
            android:textColor="@drawable/text_changeable_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:duplicateParentState="true"
            android:gravity="end|center_vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/arrow_side_btn_pressed" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="@style/marginFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Moves | Time"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="end"
            android:text="@string/compensation"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_weight="2"
        android:background="@color/grey"
        android:choiceMode="singleChoice" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/btn_make_black"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/color_select_btn_black"
            android:onClick="makeBlack" />

        <ImageView
            android:id="@+id/btn_make_green"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/color_select_btn_green"
            android:onClick="makeGreen" />

        <ImageView
            android:id="@+id/btn_make_orange"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/color_select_btn_orange"
            android:onClick="makeOrange" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_set_time_bottom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/btn_set_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:onClick="setTime"
            android:text="@string/btn_set_time"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />
    </RelativeLayout>
</LinearLayout>